Bug 563847 - [OOPP] Fix for crash [@ ntdll.dll@0x222a2 ] [@ RtlEnterCriticalSection ] (from PluginInstanceChild::FlashThrottleMessage). r=bent.